--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.1.2",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "swiper": "^8.4.4",
     "typescript": "^4.8.4",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
