--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.1.2",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
